--- a/python/freq_var_features.ipynb
+++ b/python/freq_var_features.ipynb
@@ -399,6 +399,78 @@
     "\n",
     "cross_validate(XGBRegressor, {}, df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/westi/Repos/seismic/env/lib/python3.6/site-packages/xgboost/core.py:587: FutureWarning: Series.base is deprecated and will be removed in a future version\n",
+      "  if getattr(data, 'base', None) is not None and \\\n",
+      "/Users/westi/Repos/seismic/env/lib/python3.6/site-packages/xgboost/core.py:588: FutureWarning: Series.base is deprecated and will be removed in a future version\n",
+      "  data.base is not None and isinstance(data, np.ndarray) \\\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "XGBRegressor(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "       colsample_bytree=1, gamma=0, importance_type='gain',\n",
+       "       learning_rate=0.1, max_delta_step=0, max_depth=3,\n",
+       "       min_child_weight=1, missing=None, n_estimators=100, n_jobs=1,\n",
+       "       nthread=None, objective='reg:linear', random_state=0, reg_alpha=0,\n",
+       "       reg_lambda=1, scale_pos_weight=1, seed=None, silent=True,\n",
+       "       subsample=1)"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = XGBRegressor()\n",
+    "model.fit(df.drop('target', axis=1), df['target'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from glob import glob\n",
+    "import re\n",
+    "\n",
+    "test_seq_files = glob(\"../data/test/*.csv\")\n",
+    "test_seq_ids = [re.findall(\"seg_\\w*\", s)[0] for s in test_seq_files]\n",
+    "test_seqs = [pd.read_csv(fp)['acoustic_data'] for fp in test_seq_files]\n",
+    "test_feats = pd.concat([\n",
+    "    generate_sequence_features(\n",
+    "        sequence - NULL_OFF,\n",
+    "        freq_windows=FREQ_WINDOWS,\n",
+    "        vari_windows=VARI_WINDOWS\n",
+    "    ) for sequence in test_seqs \n",
+    "])\n",
+    "predictions = model.predict(test_feats)\n",
+    "plt.hist(predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame({\n",
+    "    \"seg_id\": test_seq_ids,\n",
+    "    \"time_to_failure\": predictions\n",
+    "}).sort_values(\"seg_id\").to_csv(\"../data/predictions/freq_var_features.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
